# vision-curator

./: .gitignore  README.md  docker-compose.yml
backend/: new.py  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: datasets.py  embeddings.py  search.py
backend/app/models/: dataset.py  image.py  schemas.py
backend/app/services/: celery_app.py  processing.py  tasks.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/clusters/: page.tsx
frontend/src/app/datasets/: page.tsx
frontend/src/app/datasets/[id]/: page.tsx
frontend/src/app/duplicates/: page.tsx
frontend/src/app/galaxy/: page.tsx
frontend/src/app/outliers/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: ClientLayout.tsx  ImageModal.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  providers.tsx  store.ts
infrastructure/docker/: Dockerfile.backend  Dockerfile.frontend
infrastructure/kubernetes/: deployment.yaml
ml/clustering/: clustering.py
ml/embedding_models/: base.py  dinov2.py  moco.py  resnet.py  simclr.py
ml/embeddings/: dimensionality_reduction.py  faiss_index.py
ml/outlier_detection/: __init__.py  duplicate_detection.py  outlier_detection.py
ml/preprocessing/: preprocessing.py
