[project]
name = "visioncurator-backend"
version = "0.1.0"
description = "VisionCurator — Self-Supervised Dataset Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "faiss-cpu>=1.8.0",
    "umap-learn>=0.5.0",
    "scikit-learn>=1.4.0",
    "hdbscan>=0.8.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "aiofiles>=23.0.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
